--- a/src/style.css
+++ b/src/style.css
@@ -2,7 +2,6 @@
     box-sizing: border-box;
 }
 .above-fold{
-    background: grey;
     width: 100%;
     height: 100%
 }
@@ -13,7 +12,11 @@
     padding:10px;
     margin-top: 5px;
 }
-img{
+img.carousel{
     width:100vw;
     height: 90vh;
+}
+img{
+    margin: 0 auto;
+    display: flex;
 }
